fix: Prevent Windows Spotlight from disappearing from lock screen settings
The IsEducationEnvironment registry key set by the Recommended Section "Hide" setting was removing the Spotlight option from Windows Settings entirely. Added a RequiresSpecificValue dependency so enabling Spotlight automatically sets Recommended Section to "Show". Also added the missing SubscribedContent-338387Enabled registry entry to the lock screen overlay setting and removed the non-functional lock screen slideshow setting. Updated descriptions and all 25 localization files.

Fixes #306

--- a/src/Winhance.UI/Features/Common/Localization/af.json
+++ b/src/Winhance.UI/Features/Common/Localization/af.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Meer vasgespeldes",
   "Setting_start-menu-layout_Option_2": "Meer aanbevelings",
   "Setting_start-recommended-section_Name": "Aanbevole afdeling",
-  "Setting_start-recommended-section_Description": "Wys of verberg die onderste afdeling wat onlangs oopgemaakte lêers en voorgestelde toepassings vertoon",
+  "Setting_start-recommended-section_Description": "Wys of verberg die onderste afdeling wat onlangs oopgemaakte lêers en voorgestelde toepassings vertoon. As hierdie afdeling verberg word, verwyder dit ook Windows Kollig van die sluitskerm-opsies",
   "Setting_start-recommended-section_Option_0": "Wys",
   "Setting_start-recommended-section_Option_1": "Verberg",
   "Setting_start-show-all-pins-by-default_Name": "Wys alle vasgespeldes by verstek",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Pasgemaak",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Kollig",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Pretfeite & Wenke",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Skyfievertoning",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Voorgestelde Inhoud",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Tydlyn Voorstelle",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Verwelkomingservaring",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Sluitskerm",
   "Setting_privacy-lock-screen_Description": "Laat gebruikers toe om hul rekenaar te sluit met Windows+L, Beginlys, of Ctrl+Alt+Del skerm",
   "Setting_privacy-rotating-lock-screen_Name": "Windows Kollig op Sluitskerm",
-  "Setting_privacy-rotating-lock-screen_Description": "Vertoon roterende Windows Kollig beelde op jou sluitskerm in plaas van 'n statiese agtergrond",
+  "Setting_privacy-rotating-lock-screen_Description": "Vertoon roterende Windows Kollig beelde op jou sluitskerm in plaas van 'n statiese agtergrond. Winhance stel die Beginkieslys se Aanbevole Afdeling outomaties op Wys wanneer hierdie instelling geaktiveer word, aangesien dit vereis word",
   "Setting_privacy-lock-screen-overlay_Name": "Sluitskerm Pretfeite en Wenke",
   "Setting_privacy-lock-screen-overlay_Description": "Vertoon pretfeite, wenke, en truuks as 'n oorleg op jou sluitskerm",
-  "Setting_privacy-lock-screen-slideshow_Name": "Sluitskerm Skyfievertoning",
-  "Setting_privacy-lock-screen-slideshow_Description": "Aktiveer skyfievertoning opsie vir sluitskerm agtergrond",
   "Setting_privacy-advertising-id_Name": "Laat toepassings toe om my gepersonaliseerde advertensies te wys deur my advertensie-ID te gebruik",
   "Setting_privacy-advertising-id_Description": "Windows genereer 'n unieke advertensie-ID wat toepassings gebruik om jou aktiwiteit op te spoor en gepersonaliseerde advertensies te lewer gebaseer op jou gedrag oor verskillende toepassings",
   "Setting_privacy-language-list_Name": "Laat webwerwe toe om my plaaslik relevante inhoud te wys deur toegang tot my taallys te verkry",
