--- a/src/Winhance.UI/Features/Common/Localization/ar.json
+++ b/src/Winhance.UI/Features/Common/Localization/ar.json
@@ -216,7 +216,7 @@
     "Setting_start-menu-layout_Option_1": "مزيد من المثبتات",
     "Setting_start-menu-layout_Option_2": "مزيد من التوصيات",
     "Setting_start-recommended-section_Name": "قسم الموصى به",
-    "Setting_start-recommended-section_Description": "إظهار أو إخفاء القسم السفلي الذي يعرض الملفات المفتوحة مؤخرًا والتطبيقات المقترحة",
+    "Setting_start-recommended-section_Description": "إظهار أو إخفاء القسم السفلي الذي يعرض الملفات المفتوحة مؤخرًا والتطبيقات المقترحة. يؤدي إخفاء هذا القسم أيضًا إلى إزالة Windows Spotlight من خيارات شاشة القفل",
     "Setting_start-recommended-section_Option_0": "إظهار",
     "Setting_start-recommended-section_Option_1": "إخفاء",
     "Setting_start-show-all-pins-by-default_Name": "إظهار كل المثبتات افتراضيًا",
@@ -467,7 +467,6 @@
     "Setting_privacy-ads-promotional-master_Option_2": "مخصص",
     "Setting_privacy-ads-promotional-master_Child_Spotlight": "Spotlight",
     "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "حقائق ممتعة ونصائح",
-    "Setting_privacy-ads-promotional-master_Child_Slideshow": "عرض شرائح",
     "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "المحتوى المقترح",
     "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "اقتراحات الخط الزمني",
     "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "تجربة الترحيب",
@@ -493,11 +492,9 @@
     "Setting_privacy-lock-screen_Name": "شاشة القفل",
     "Setting_privacy-lock-screen_Description": "يسمح للمستخدمين بقفل الكمبيوتر باستخدام Windows+L أو قائمة ابدأ أو شاشة Ctrl+Alt+Del",
     "Setting_privacy-rotating-lock-screen_Name": "Windows Spotlight على شاشة القفل",
-    "Setting_privacy-rotating-lock-screen_Description": "يعرض صور Windows Spotlight المتغيرة على شاشة القفل بدلًا من خلفية ثابتة",
+    "Setting_privacy-rotating-lock-screen_Description": "يعرض صور Windows Spotlight المتغيرة على شاشة القفل بدلًا من خلفية ثابتة. يقوم Winhance تلقائيًا بتعيين قسم المستحسن في قائمة البدء على إظهار عند تفعيل هذا الإعداد، حيث إن ذلك مطلوب",
     "Setting_privacy-lock-screen-overlay_Name": "حقائق ممتعة ونصائح على شاشة القفل",
     "Setting_privacy-lock-screen-overlay_Description": "يعرض حقائق ممتعة ونصائح وحيل كطبقة فوق شاشة القفل",
-    "Setting_privacy-lock-screen-slideshow_Name": "عرض شرائح شاشة القفل",
-    "Setting_privacy-lock-screen-slideshow_Description": "يمكّن خيار عرض شرائح لخلفية شاشة القفل",
     "Setting_privacy-advertising-id_Name": "اسمح للتطبيقات بعرض إعلانات مخصصة باستخدام معرّف الإعلانات الخاص بي",
     "Setting_privacy-advertising-id_Description": "ينشئ Windows معرّف إعلانات فريدًا تستخدمه التطبيقات لتتبع نشاطك وتقديم إعلانات مخصصة بناءً على سلوكك عبر التطبيقات المختلفة",
     "Setting_privacy-language-list_Name": "اسمح لمواقع الويب بإظهار محتوى محلي مناسب عبر الوصول إلى قائمة لغاتي",
