--- a/src/Winhance.UI/Features/Common/Localization/cs.json
+++ b/src/Winhance.UI/Features/Common/Localization/cs.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Více připnutí",
   "Setting_start-menu-layout_Option_2": "Více doporučení",
   "Setting_start-recommended-section_Name": "Sekce Doporučené",
-  "Setting_start-recommended-section_Description": "Zobrazit nebo skrýt spodní sekci, která zobrazuje nedávno otevřené soubory a navrhované aplikace",
+  "Setting_start-recommended-section_Description": "Zobrazit nebo skrýt spodní sekci, která zobrazuje nedávno otevřené soubory a navrhované aplikace. Skrytí této sekce také odstraní Windows Spotlight z možností zamykací obrazovky",
   "Setting_start-recommended-section_Option_0": "Zobrazit",
   "Setting_start-recommended-section_Option_1": "Skrýt",
   "Setting_start-show-all-pins-by-default_Name": "Ve výchozím nastavení zobrazit všechny připnuté položky",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Vlastní",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Spotlight",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Zajímavosti a tipy",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Prezentace",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Navrhovaný obsah",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Návrhy časové osy",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Uvítací prostředí",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Zamykací obrazovka",
   "Setting_privacy-lock-screen_Description": "Umožňuje uživatelům uzamknout počítač pomocí kláves Windows+L, nabídky Start nebo obrazovky Ctrl+Alt+Del",
   "Setting_privacy-rotating-lock-screen_Name": "Windows Spotlight na zamykací obrazovce",
-  "Setting_privacy-rotating-lock-screen_Description": "Zobrazuje rotující obrázky Windows Spotlight na zamykací obrazovce místo statického pozadí",
+  "Setting_privacy-rotating-lock-screen_Description": "Zobrazuje rotující obrázky Windows Spotlight na zamykací obrazovce místo statického pozadí. Winhance automaticky nastaví sekci Doporučené v nabídce Start na Zobrazit, když je toto nastavení povoleno, protože je to vyžadováno",
   "Setting_privacy-lock-screen-overlay_Name": "Zajímavosti a tipy na zamykací obrazovce",
   "Setting_privacy-lock-screen-overlay_Description": "Zobrazuje zajímavosti, tipy a triky jako překryv na zamykací obrazovce",
-  "Setting_privacy-lock-screen-slideshow_Name": "Prezentace na zamykací obrazovce",
-  "Setting_privacy-lock-screen-slideshow_Description": "Povolí možnost prezentace pro pozadí zamykací obrazovky",
   "Setting_privacy-advertising-id_Name": "Umožnit aplikacím zobrazovat mi personalizované reklamy pomocí mého reklamního ID",
   "Setting_privacy-advertising-id_Description": "Windows generuje jedinečné reklamní ID, které aplikace používají ke sledování vaší aktivity a doručování personalizovaných reklam na základě vašeho chování v různých aplikacích",
   "Setting_privacy-language-list_Name": "Umožnit webovým stránkám zobrazovat mi místně relevantní obsah přístupem k mému seznamu jazyků",
