--- a/src/Winhance.UI/Features/Common/Localization/de.json
+++ b/src/Winhance.UI/Features/Common/Localization/de.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Mehr Pins",
   "Setting_start-menu-layout_Option_2": "Mehr Empfehlungen",
   "Setting_start-recommended-section_Name": "Empfohlener Abschnitt",
-  "Setting_start-recommended-section_Description": "Den unteren Abschnitt ein- oder ausblenden, der kürzlich geöffnete Dateien und vorgeschlagene Apps anzeigt",
+  "Setting_start-recommended-section_Description": "Den unteren Abschnitt ein- oder ausblenden, der kürzlich geöffnete Dateien und vorgeschlagene Apps anzeigt. Das Ausblenden dieses Abschnitts entfernt auch Windows-Blickpunkt aus den Sperrbildschirmoptionen",
   "Setting_start-recommended-section_Option_0": "Anzeigen",
   "Setting_start-recommended-section_Option_1": "Ausblenden",
   "Setting_start-show-all-pins-by-default_Name": "Standardmäßig alle Pins anzeigen",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Benutzerdefiniert",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Blickpunkt",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Wissenswertes & Tipps",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Diashow",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Vorgeschlagener Inhalt",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Timeline-Vorschläge",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Willkommenserfahrung",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Sperrbildschirm",
   "Setting_privacy-lock-screen_Description": "Ermöglicht Benutzern, ihren Computer mit Windows+L, dem Startmenü oder dem Strg+Alt+Entf-Bildschirm zu sperren",
   "Setting_privacy-rotating-lock-screen_Name": "Windows-Blickpunkt auf dem Sperrbildschirm",
-  "Setting_privacy-rotating-lock-screen_Description": "Zeigt rotierende Windows-Blickpunkt-Bilder auf Ihrem Sperrbildschirm anstelle eines statischen Hintergrunds an",
+  "Setting_privacy-rotating-lock-screen_Description": "Zeigt rotierende Windows-Blickpunkt-Bilder auf Ihrem Sperrbildschirm anstelle eines statischen Hintergrunds an. Winhance setzt den Empfohlenen Abschnitt im Startmenü automatisch auf Anzeigen, wenn diese Einstellung aktiviert ist, da dies erforderlich ist",
   "Setting_privacy-lock-screen-overlay_Name": "Wissenswertes und Tipps auf dem Sperrbildschirm",
   "Setting_privacy-lock-screen-overlay_Description": "Zeigt Wissenswertes, Tipps und Tricks als Überlagerung auf Ihrem Sperrbildschirm an",
-  "Setting_privacy-lock-screen-slideshow_Name": "Diashow auf dem Sperrbildschirm",
-  "Setting_privacy-lock-screen-slideshow_Description": "Aktiviert die Diashow-Option für den Sperrbildschirmhintergrund",
   "Setting_privacy-advertising-id_Name": "Apps erlauben, mir personalisierte Anzeigen anzuzeigen, indem sie meine Werbe-ID verwenden",
   "Setting_privacy-advertising-id_Description": "Windows generiert eine eindeutige Werbe-ID, die Apps verwenden, um Ihre Aktivitäten zu verfolgen und personalisierte Anzeigen basierend auf Ihrem Verhalten in verschiedenen Apps zu liefern",
   "Setting_privacy-language-list_Name": "Websites erlauben, mir lokal relevante Inhalte anzuzeigen, indem sie auf meine Sprachliste zugreifen",
