--- a/src/Winhance.UI/Features/Common/Localization/el.json
+++ b/src/Winhance.UI/Features/Common/Localization/el.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Περισσότερα καρφιτσωμένα",
   "Setting_start-menu-layout_Option_2": "Περισσότερες προτάσεις",
   "Setting_start-recommended-section_Name": "Ενότητα Προτάσεων",
-  "Setting_start-recommended-section_Description": "Εμφάνιση ή απόκρυψη της κάτω ενότητας που εμφανίζει πρόσφατα ανοιγμένα αρχεία και προτεινόμενες εφαρμογές",
+  "Setting_start-recommended-section_Description": "Εμφάνιση ή απόκρυψη της κάτω ενότητας που εμφανίζει πρόσφατα ανοιγμένα αρχεία και προτεινόμενες εφαρμογές. Η απόκρυψη αυτής της ενότητας αφαιρεί επίσης το Windows Spotlight από τις επιλογές οθόνης κλειδώματος",
   "Setting_start-recommended-section_Option_0": "Εμφάνιση",
   "Setting_start-recommended-section_Option_1": "Απόκρυψη",
   "Setting_start-show-all-pins-by-default_Name": "Εμφάνιση όλων των καρφιτσωμένων από προεπιλογή",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Προσαρμοσμένο",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Spotlight",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Διασκεδαστικά Γεγονότα \u0026 Συμβουλές",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Παρουσίαση",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Προτεινόμενο Περιεχόμενο",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Προτάσεις Χρονολογίου",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Εμπειρία Υποδοχής",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Οθόνη Κλειδώματος",
   "Setting_privacy-lock-screen_Description": "Επιτρέπει στους χρήστες να κλειδώνουν τον υπολογιστή τους χρησιμοποιώντας Windows+L, μενού Έναρξης ή οθόνη Ctrl+Alt+Del",
   "Setting_privacy-rotating-lock-screen_Name": "Windows Spotlight στην Οθόνη Κλειδώματος",
-  "Setting_privacy-rotating-lock-screen_Description": "Εμφανίζει εναλλασσόμενες εικόνες Windows Spotlight στην οθόνη κλειδώματός σας αντί για στατικό φόντο",
+  "Setting_privacy-rotating-lock-screen_Description": "Εμφανίζει εναλλασσόμενες εικόνες Windows Spotlight στην οθόνη κλειδώματός σας αντί για στατικό φόντο. Το Winhance ορίζει αυτόματα την Ενότητα Προτάσεων του Μενού Έναρξης σε Εμφάνιση όταν αυτή η ρύθμιση είναι ενεργοποιημένη, καθώς είναι απαραίτητο",
   "Setting_privacy-lock-screen-overlay_Name": "Διασκεδαστικά Γεγονότα και Συμβουλές Οθόνης Κλειδώματος",
   "Setting_privacy-lock-screen-overlay_Description": "Εμφανίζει διασκεδαστικά γεγονότα, συμβουλές και κόλπα ως επικάλυψη στην οθόνη κλειδώματός σας",
-  "Setting_privacy-lock-screen-slideshow_Name": "Παρουσίαση Οθόνης Κλειδώματος",
-  "Setting_privacy-lock-screen-slideshow_Description": "Ενεργοποιεί την επιλογή παρουσίασης για το φόντο της οθόνης κλειδώματος",
   "Setting_privacy-advertising-id_Name": "Να επιτρέπεται στις εφαρμογές να μου εμφανίζουν εξατομικευμένες διαφημίσεις χρησιμοποιώντας το αναγνωριστικό διαφήμισής μου",
   "Setting_privacy-advertising-id_Description": "Τα Windows δημιουργούν ένα μοναδικό αναγνωριστικό διαφήμισης που χρησιμοποιούν οι εφαρμογές για να παρακολουθούν τη δραστηριότητά σας και να παραδίδουν εξατομικευμένες διαφημίσεις βάσει της συμπεριφοράς σας σε διαφορετικές εφαρμογές",
   "Setting_privacy-language-list_Name": "Να επιτρέπεται στις ιστοσελίδες να μου εμφανίζουν τοπικά σχετικό περιεχόμενο έχοντας πρόσβαση στη λίστα γλωσσών μου",
