--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -265,7 +265,7 @@
   "Setting_start-menu-layout_Option_1": "More pins",
   "Setting_start-menu-layout_Option_2": "More recommendations",
   "Setting_start-recommended-section_Name": "Recommended section",
-  "Setting_start-recommended-section_Description": "Show or hide the lower section that displays recently opened files and suggested apps",
+  "Setting_start-recommended-section_Description": "Show or hide the lower section that displays recently opened files and suggested apps. Hiding this section also removes Windows Spotlight from the lock screen options",
   "Setting_start-recommended-section_Option_0": "Show",
   "Setting_start-recommended-section_Option_1": "Hide",
   "Setting_start-show-all-pins-by-default_Name": "Show all pins by default",
@@ -516,7 +516,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Custom",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Spotlight",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Fun Facts \u0026 Tips",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Slideshow",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Suggested Content",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Timeline Suggestions",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Welcome Experience",
@@ -542,11 +541,9 @@
   "Setting_privacy-lock-screen_Name": "Lock Screen",
   "Setting_privacy-lock-screen_Description": "Allows users to lock their computer using Windows+L, Start menu, or Ctrl+Alt+Del screen",
   "Setting_privacy-rotating-lock-screen_Name": "Windows Spotlight on Lock Screen",
-  "Setting_privacy-rotating-lock-screen_Description": "Displays rotating Windows Spotlight images on your lock screen instead of a static background",
+  "Setting_privacy-rotating-lock-screen_Description": "Displays rotating Windows Spotlight images on your lock screen instead of a static background. Winhance automatically sets the Start Menu Recommended Section to Show when this setting is enabled as it is required",
   "Setting_privacy-lock-screen-overlay_Name": "Lock Screen Fun Facts and Tips",
   "Setting_privacy-lock-screen-overlay_Description": "Displays fun facts, tips, and tricks as an overlay on your lock screen",
-  "Setting_privacy-lock-screen-slideshow_Name": "Lock Screen Slideshow",
-  "Setting_privacy-lock-screen-slideshow_Description": "Enables slideshow option for lock screen background",
   "Setting_privacy-advertising-id_Name": "Let apps show me personalized ads by using my advertising ID",
   "Setting_privacy-advertising-id_Description": "Windows generates a unique advertising ID that apps use to track your activity and deliver personalized ads based on your behavior across different apps",
   "Setting_privacy-language-list_Name": "Let websites show me locally relevant content by accessing my language list",
