--- a/src/Winhance.UI/Features/Common/Localization/es.json
+++ b/src/Winhance.UI/Features/Common/Localization/es.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Más elementos anclados",
   "Setting_start-menu-layout_Option_2": "Más recomendaciones",
   "Setting_start-recommended-section_Name": "Sección recomendada",
-  "Setting_start-recommended-section_Description": "Muestra u oculta la sección inferior que muestra los archivos abiertos recientemente y las aplicaciones sugeridas",
+  "Setting_start-recommended-section_Description": "Muestra u oculta la sección inferior que muestra los archivos abiertos recientemente y las aplicaciones sugeridas. Ocultar esta sección también elimina Windows Spotlight de las opciones de pantalla de bloqueo",
   "Setting_start-recommended-section_Option_0": "Mostrar",
   "Setting_start-recommended-section_Option_1": "Ocultar",
   "Setting_start-show-all-pins-by-default_Name": "Mostrar todos los elementos anclados por defecto",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Personalizado",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Spotlight",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Curiosidades y Consejos",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Presentación",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Contenido Sugerido",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Sugerencias de la Línea de Tiempo",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Experiencia de Bienvenida",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Pantalla de bloqueo",
   "Setting_privacy-lock-screen_Description": "Permite a los usuarios bloquear su equipo usando Windows+L, el menú Inicio o la pantalla Ctrl+Alt+Supr",
   "Setting_privacy-rotating-lock-screen_Name": "Windows Spotlight en la pantalla de bloqueo",
-  "Setting_privacy-rotating-lock-screen_Description": "Muestra imágenes rotatorias de Windows Spotlight en tu pantalla de bloqueo en lugar de un fondo estático",
+  "Setting_privacy-rotating-lock-screen_Description": "Muestra imágenes rotatorias de Windows Spotlight en tu pantalla de bloqueo en lugar de un fondo estático. Winhance establece automáticamente la Sección Recomendados del Menú Inicio en Mostrar cuando esta configuración está activada, ya que es necesario",
   "Setting_privacy-lock-screen-overlay_Name": "Curiosidades y consejos en la pantalla de bloqueo",
   "Setting_privacy-lock-screen-overlay_Description": "Muestra curiosidades, consejos y trucos como una superposición en tu pantalla de bloqueo",
-  "Setting_privacy-lock-screen-slideshow_Name": "Presentación de diapositivas en la pantalla de bloqueo",
-  "Setting_privacy-lock-screen-slideshow_Description": "Habilita la opción de presentación de diapositivas para el fondo de la pantalla de bloqueo",
   "Setting_privacy-advertising-id_Name": "Permitir que las aplicaciones me muestren anuncios personalizados usando mi ID de publicidad",
   "Setting_privacy-advertising-id_Description": "Windows genera un ID de publicidad único que las aplicaciones usan para rastrear tu actividad y mostrar anuncios personalizados basados en tu comportamiento en diferentes aplicaciones",
   "Setting_privacy-language-list_Name": "Permitir que los sitios web me muestren contenido relevante localmente accediendo a mi lista de idiomas",
