--- a/src/Winhance.UI/Features/Common/Localization/fr.json
+++ b/src/Winhance.UI/Features/Common/Localization/fr.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Plus d'épingles",
   "Setting_start-menu-layout_Option_2": "Plus de recommandations",
   "Setting_start-recommended-section_Name": "Section Recommandé",
-  "Setting_start-recommended-section_Description": "Afficher ou masquer la section inférieure qui affiche les fichiers récemment ouverts et les applications suggérées",
+  "Setting_start-recommended-section_Description": "Afficher ou masquer la section inférieure qui affiche les fichiers récemment ouverts et les applications suggérées. Masquer cette section supprime également Windows à la une des options de l'écran de verrouillage",
   "Setting_start-recommended-section_Option_0": "Afficher",
   "Setting_start-recommended-section_Option_1": "Masquer",
   "Setting_start-show-all-pins-by-default_Name": "Afficher toutes les épingles par défaut",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Personnalisé",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Spotlight",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Faits amusants & Astuces",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Diaporama",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Contenu suggéré",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Suggestions de la chronologie",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Expérience de bienvenue",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Écran de verrouillage",
   "Setting_privacy-lock-screen_Description": "Permet aux utilisateurs de verrouiller leur ordinateur à l'aide de Windows+L, du menu Démarrer ou de l'écran Ctrl+Alt+Suppr",
   "Setting_privacy-rotating-lock-screen_Name": "Windows à la une sur l'écran de verrouillage",
-  "Setting_privacy-rotating-lock-screen_Description": "Affiche des images tournantes de Windows à la une sur votre écran de verrouillage au lieu d'un arrière-plan statique",
+  "Setting_privacy-rotating-lock-screen_Description": "Affiche des images tournantes de Windows à la une sur votre écran de verrouillage au lieu d'un arrière-plan statique. Winhance définit automatiquement la Section Recommandé du Menu Démarrer sur Afficher lorsque ce paramètre est activé, car cela est requis",
   "Setting_privacy-lock-screen-overlay_Name": "Faits amusants et conseils sur l'écran de verrouillage",
   "Setting_privacy-lock-screen-overlay_Description": "Affiche des faits amusants, des conseils et des astuces en superposition sur votre écran de verrouillage",
-  "Setting_privacy-lock-screen-slideshow_Name": "Diaporama de l'écran de verrouillage",
-  "Setting_privacy-lock-screen-slideshow_Description": "Active l'option de diaporama pour l'arrière-plan de l'écran de verrouillage",
   "Setting_privacy-advertising-id_Name": "Laisser les applications m'afficher des publicités personnalisées en utilisant mon identifiant publicitaire",
   "Setting_privacy-advertising-id_Description": "Windows génère un identifiant publicitaire unique que les applications utilisent pour suivre votre activité et diffuser des publicités personnalisées en fonction de votre comportement sur différentes applications",
   "Setting_privacy-language-list_Name": "Laisser les sites web m'afficher du contenu localement pertinent en accédant à ma liste de langues",
