--- a/src/Winhance.UI/Features/Common/Localization/hi.json
+++ b/src/Winhance.UI/Features/Common/Localization/hi.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "अधिक पिन",
   "Setting_start-menu-layout_Option_2": "अधिक सिफारिशें",
   "Setting_start-recommended-section_Name": "अनुशंसित अनुभाग",
-  "Setting_start-recommended-section_Description": "हाल ही में खोली गई फ़ाइलों और सुझाए गए ऐप्स को प्रदर्शित करने वाले निचले अनुभाग को दिखाएं या छिपाएं",
+  "Setting_start-recommended-section_Description": "हाल ही में खोली गई फ़ाइलों और सुझाए गए ऐप्स को प्रदर्शित करने वाले निचले अनुभाग को दिखाएं या छिपाएं. इस अनुभाग को छिपाने से लॉक स्क्रीन विकल्पों से विंडोज स्पॉटलाइट भी हट जाता है",
   "Setting_start-recommended-section_Option_0": "दिखाएँ",
   "Setting_start-recommended-section_Option_1": "छिपाएँ",
   "Setting_start-show-all-pins-by-default_Name": "डिफ़ॉल्ट रूप से सभी पिन दिखाएं",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "कस्टम",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "स्पॉटलाइट",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "मजेदार तथ्य और युक्तियाँ",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "स्लाइड शो",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "सुझाई गई सामग्री",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "समयरेखा सुझाव",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "स्वागत अनुभव",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "लॉक स्क्रीन",
   "Setting_privacy-lock-screen_Description": "उपयोगकर्ताओं को विंडोज + एल, स्टार्ट मेनू, या Ctrl + Alt + Del स्क्रीन का उपयोग करके अपने कंप्यूटर को लॉक करने की अनुमति देता है",
   "Setting_privacy-rotating-lock-screen_Name": "लॉक स्क्रीन पर विंडोज स्पॉटलाइट",
-  "Setting_privacy-rotating-lock-screen_Description": "एक स्थिर पृष्ठभूमि के बजाय आपकी लॉक स्क्रीन पर घूमती हुई विंडोज स्पॉटलाइट छवियां प्रदर्शित करता है",
+  "Setting_privacy-rotating-lock-screen_Description": "एक स्थिर पृष्ठभूमि के बजाय आपकी लॉक स्क्रीन पर घूमती हुई विंडोज स्पॉटलाइट छवियां प्रदर्शित करता है. जब यह सेटिंग सक्षम होती है तो Winhance स्वचालित रूप से स्टार्ट मेनू अनुशंसित अनुभाग को दिखाएं पर सेट कर देता है क्योंकि यह आवश्यक है",
   "Setting_privacy-lock-screen-overlay_Name": "लॉक स्क्रीन मजेदार तथ्य और युक्तियाँ",
   "Setting_privacy-lock-screen-overlay_Description": "आपकी लॉक स्क्रीन पर एक ओवरले के रूप में मजेदार तथ्य, टिप्स और ट्रिक्स प्रदर्शित करता है",
-  "Setting_privacy-lock-screen-slideshow_Name": "लॉक स्क्रीन स्लाइड शो",
-  "Setting_privacy-lock-screen-slideshow_Description": "लॉक स्क्रीन पृष्ठभूमि के लिए स्लाइड शो विकल्प सक्षम करता है",
   "Setting_privacy-advertising-id_Name": "मेरी विज्ञापन आईडी का उपयोग करके मुझे वैयक्तिकृत विज्ञापन दिखाने के लिए ऐप्स को अनुमति दें",
   "Setting_privacy-advertising-id_Description": "विंडोज एक अद्वितीय विज्ञापन आईडी उत्पन्न करता है जिसका उपयोग ऐप्स आपकी गतिविधि को ट्रैक करने और विभिन्न ऐप्स में आपके व्यवहार के आधार पर वैयक्तिकृत विज्ञापन देने के लिए करते हैं",
   "Setting_privacy-language-list_Name": "मेरी भाषा सूची तक पहुँच कर मुझे स्थानीय रूप से प्रासंगिक सामग्री दिखाने के लिए वेबसाइटों को अनुमति दें",
