--- a/src/Winhance.UI/Features/Common/Localization/hu.json
+++ b/src/Winhance.UI/Features/Common/Localization/hu.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Több kitűzés",
   "Setting_start-menu-layout_Option_2": "Több ajánlás",
   "Setting_start-recommended-section_Name": "Ajánlott rész",
-  "Setting_start-recommended-section_Description": "A nemrég megnyitott fájlokat és javasolt alkalmazásokat megjelenítő alsó rész megjelenítése vagy elrejtése",
+  "Setting_start-recommended-section_Description": "A nemrég megnyitott fájlokat és javasolt alkalmazásokat megjelenítő alsó rész megjelenítése vagy elrejtése. Ennek a szakasznak az elrejtése eltávolítja a Windows Reflektort a zárolási képernyő beállításai közül",
   "Setting_start-recommended-section_Option_0": "Megjelenít",
   "Setting_start-recommended-section_Option_1": "Elrejt",
   "Setting_start-show-all-pins-by-default_Name": "Alapértelmezés szerint az összes kitűzést mutassa",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Egyéni",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Reflektor",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Érdekességek és Tippek",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Diavetítés",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Javasolt tartalom",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Idővonal-javaslatok",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Üdvözlő élmény",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Képernyőzár",
   "Setting_privacy-lock-screen_Description": "Lehetővé teszi a felhasználók számára a számítógép zárolását a Windows+L, a Start menü vagy a Ctrl+Alt+Del képernyő használatával",
   "Setting_privacy-rotating-lock-screen_Name": "Windows Reflektor a zárolási képernyőn",
-  "Setting_privacy-rotating-lock-screen_Description": "A zárolási képernyőn statikus háttér helyett változó Windows Reflektor képeket jelenít meg.",
+  "Setting_privacy-rotating-lock-screen_Description": "A zárolási képernyőn statikus háttér helyett változó Windows Reflektor képeket jelenít meg. A Winhance automatikusan a Start menü Ajánlott szakaszát Megjelenítés értékre állítja, amikor ez a beállítás engedélyezve van, mivel erre szükség van",
   "Setting_privacy-lock-screen-overlay_Name": "Érdekességek és tippek a zárolási képernyőn",
   "Setting_privacy-lock-screen-overlay_Description": "Vicces tényeket, tippeket és trükköket jelenít meg felugróként a zárolási képernyőn",
-  "Setting_privacy-lock-screen-slideshow_Name": "Zárolási képernyő diavetítés",
-  "Setting_privacy-lock-screen-slideshow_Description": "Lehetővé teszi a diavetítés funkciót a zárolási képernyő háttérképéhez",
   "Setting_privacy-advertising-id_Name": "Engedélyezem az alkalmazásoknak, hogy a hirdetési azonosítóm alapján személyre szabott hirdetéseket jelenítsenek meg",
   "Setting_privacy-advertising-id_Description": "A Windows egy egyedi hirdetési azonosítót generál, amelyet az alkalmazások használnak az Ön tevékenységének nyomon követésére és személyre szabott hirdetések megjelenítésére a különböző alkalmazásokban tanúsított viselkedése alapján.",
   "Setting_privacy-language-list_Name": "Engedélyezem a webhelyeknek, hogy a helyi szempontból releváns tartalmat jelenítsenek meg azáltal, hogy hozzáférnek a nyelvlistámhoz",
