--- a/src/Winhance.UI/Features/Common/Localization/it.json
+++ b/src/Winhance.UI/Features/Common/Localization/it.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Più aggiunti",
   "Setting_start-menu-layout_Option_2": "Più raccomandazioni",
   "Setting_start-recommended-section_Name": "Sezione consigliata",
-  "Setting_start-recommended-section_Description": "Mostra o nascondi la sezione inferiore che visualizza i file aperti di recente e le app suggerite",
+  "Setting_start-recommended-section_Description": "Mostra o nascondi la sezione inferiore che visualizza i file aperti di recente e le app suggerite. Nascondere questa sezione rimuove anche In evidenza di Windows dalle opzioni della schermata di blocco",
   "Setting_start-recommended-section_Option_0": "Mostra",
   "Setting_start-recommended-section_Option_1": "Nascondi",
   "Setting_start-show-all-pins-by-default_Name": "Mostra tutti gli elementi aggiunti per impostazione predefinita",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Personalizzato",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "In evidenza",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Curiosità e suggerimenti",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Presentazione",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Contenuto suggerito",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Suggerimenti della sequenza temporale",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Esperienza di benvenuto",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Schermata di blocco",
   "Setting_privacy-lock-screen_Description": "Consente agli utenti di bloccare il computer utilizzando Windows+L, il menu Start o la schermata Ctrl+Alt+Canc",
   "Setting_privacy-rotating-lock-screen_Name": "In evidenza di Windows sulla schermata di blocco",
-  "Setting_privacy-rotating-lock-screen_Description": "Visualizza immagini di In evidenza di Windows a rotazione sulla schermata di blocco invece di uno sfondo statico",
+  "Setting_privacy-rotating-lock-screen_Description": "Visualizza immagini di In evidenza di Windows a rotazione sulla schermata di blocco invece di uno sfondo statico. Winhance imposta automaticamente la Sezione consigliata del menu Start su Mostra quando questa impostazione è abilitata poiché è necessario",
   "Setting_privacy-lock-screen-overlay_Name": "Curiosità e suggerimenti sulla schermata di blocco",
   "Setting_privacy-lock-screen-overlay_Description": "Visualizza curiosità, suggerimenti e trucchi come sovrapposizione sulla schermata di blocco",
-  "Setting_privacy-lock-screen-slideshow_Name": "Presentazione della schermata di blocco",
-  "Setting_privacy-lock-screen-slideshow_Description": "Abilita l'opzione di presentazione per lo sfondo della schermata di blocco",
   "Setting_privacy-advertising-id_Name": "Consenti alle app di mostrarmi annunci personalizzati utilizzando il mio ID pubblicità",
   "Setting_privacy-advertising-id_Description": "Windows genera un ID pubblicità univoco che le app utilizzano per tenere traccia della tua attività e fornire annunci personalizzati in base al tuo comportamento su diverse app",
   "Setting_privacy-language-list_Name": "Consenti ai siti Web di mostrarmi contenuti pertinenti a livello locale accedendo al mio elenco di lingue",
