--- a/src/Winhance.UI/Features/Common/Localization/ja.json
+++ b/src/Winhance.UI/Features/Common/Localization/ja.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "より多くのピン",
   "Setting_start-menu-layout_Option_2": "より多くの推奨",
   "Setting_start-recommended-section_Name": "推奨セクション",
-  "Setting_start-recommended-section_Description": "最近開いたファイルや提案されたアプリを表示する下部セクションを表示または非表示にする",
+  "Setting_start-recommended-section_Description": "最近開いたファイルや提案されたアプリを表示する下部セクションを表示または非表示にする. このセクションを非表示にすると、ロック画面のオプションからWindowsスポットライトも削除されます",
   "Setting_start-recommended-section_Option_0": "表示",
   "Setting_start-recommended-section_Option_1": "非表示",
   "Setting_start-show-all-pins-by-default_Name": "デフォルトですべてのピンを表示",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "カスタム",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "スポットライト",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "豆知識とヒント",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "スライドショー",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "提案されたコンテンツ",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "タイムラインの提案",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "ウェルカムエクスペリエンス",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "ロック画面",
   "Setting_privacy-lock-screen_Description": "ユーザーがWindows+L、スタートメニュー、またはCtrl+Alt+Del画面を使用してコンピュータをロックできるようにする",
   "Setting_privacy-rotating-lock-screen_Name": "ロック画面のWindowsスポットライト",
-  "Setting_privacy-rotating-lock-screen_Description": "静的な背景の代わりに、ロック画面に回転するWindowsスポットライト画像を表示する",
+  "Setting_privacy-rotating-lock-screen_Description": "静的な背景の代わりに、ロック画面に回転するWindowsスポットライト画像を表示する. この設定が有効な場合、Winhanceはスタートメニューのおすすめセクションを自動的に表示に設定します（これは必須のため）",
   "Setting_privacy-lock-screen-overlay_Name": "ロック画面の豆知識とヒント",
   "Setting_privacy-lock-screen-overlay_Description": "ロック画面に豆知識、ヒント、コツをオーバーレイとして表示する",
-  "Setting_privacy-lock-screen-slideshow_Name": "ロック画面のスライドショー",
-  "Setting_privacy-lock-screen-slideshow_Description": "ロック画面の背景にスライドショーオプションを有効にする",
   "Setting_privacy-advertising-id_Name": "広告IDを使用して、アプリにパーソナライズされた広告を表示させる",
   "Setting_privacy-advertising-id_Description": "Windowsは、アプリがアクティビティを追跡し、さまざまなアプリでの行動に基づいてパーソナライズされた広告を配信するために使用する一意の広告IDを生成します",
   "Setting_privacy-language-list_Name": "言語リストにアクセスして、Webサイトに地域に関連するコンテンツを表示させる",
