--- a/src/Winhance.UI/Features/Common/Localization/lt.json
+++ b/src/Winhance.UI/Features/Common/Localization/lt.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Daugiau prisegimų",
   "Setting_start-menu-layout_Option_2": "Daugiau rekomendacijų",
   "Setting_start-recommended-section_Name": "Rekomenduojamas skyrius",
-  "Setting_start-recommended-section_Description": "Rodyti arba slėpti apatinį skyrių, kuriame rodomi neseniai atidaryti failai ir siūlomos programos",
+  "Setting_start-recommended-section_Description": "Rodyti arba slėpti apatinį skyrių, kuriame rodomi neseniai atidaryti failai ir siūlomos programos. Paslėpus šį skyrių, „Windows Spotlight" taip pat pašalinamas iš užrakinimo ekrano parinkčių",
   "Setting_start-recommended-section_Option_0": "Rodyti",
   "Setting_start-recommended-section_Option_1": "Slėpti",
   "Setting_start-show-all-pins-by-default_Name": "Pagal numatytuosius nustatymus rodyti visus prisegimus",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Pasirinktinis",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Prožektorius",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Įdomūs faktai ir patarimai",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Skaidrių demonstracija",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Siūlomas turinys",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Laiko juostos pasiūlymai",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Pasveikinimo patirtis",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Užrakinimo ekranas",
   "Setting_privacy-lock-screen_Description": "Leidžia vartotojams užrakinti savo kompiuterį naudojant Windows+L, paleidimo meniu arba Ctrl+Alt+Del ekraną",
   "Setting_privacy-rotating-lock-screen_Name": "Windows prožektorius užrakinimo ekrane",
-  "Setting_privacy-rotating-lock-screen_Description": "Rodo besikeičiančius Windows prožektoriaus vaizdus jūsų užrakinimo ekrane vietoj statinio fono",
+  "Setting_privacy-rotating-lock-screen_Description": "Rodo besikeičiančius Windows prožektoriaus vaizdus jūsų užrakinimo ekrane vietoj statinio fono. Įjungus šį nustatymą, Winhance automatiškai nustato Pradžios meniu rekomenduojamą skyrių kaip rodomą, nes tai yra būtina",
   "Setting_privacy-lock-screen-overlay_Name": "Užrakinimo ekrano įdomūs faktai ir patarimai",
   "Setting_privacy-lock-screen-overlay_Description": "Rodo įdomius faktus, patarimus ir gudrybes kaip perdangą jūsų užrakinimo ekrane",
-  "Setting_privacy-lock-screen-slideshow_Name": "Užrakinimo ekrano skaidrių demonstracija",
-  "Setting_privacy-lock-screen-slideshow_Description": "Įjungia skaidrių demonstracijos parinktį užrakinimo ekrano fonui",
   "Setting_privacy-advertising-id_Name": "Leisti programoms rodyti man suasmenintas reklamas, naudojant mano reklamos ID",
   "Setting_privacy-advertising-id_Description": "Windows sugeneruoja unikalų reklamos ID, kurį programos naudoja jūsų veiklai stebėti ir teikti suasmenintas reklamas pagal jūsų elgseną skirtingose programose",
   "Setting_privacy-language-list_Name": "Leisti svetainėms rodyti man vietos atžvilgiu aktualų turinį, pasiekiant mano kalbų sąrašą",
