--- a/src/Winhance.UI/Features/Common/Localization/lv.json
+++ b/src/Winhance.UI/Features/Common/Localization/lv.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Vairāk piespraužu",
   "Setting_start-menu-layout_Option_2": "Vairāk ieteikumu",
   "Setting_start-recommended-section_Name": "Ieteikumu sadaļa",
-  "Setting_start-recommended-section_Description": "Rādīt vai slēpt apakšējo sadaļu, kas parāda nesen atvērtos failus un ieteiktās lietotnes",
+  "Setting_start-recommended-section_Description": "Rādīt vai slēpt apakšējo sadaļu, kas parāda nesen atvērtos failus un ieteiktās lietotnes. Slēpjot šo sadaļu, tiek noņemts arī Windows Spotlight no bloķēšanas ekrāna opcijām",
   "Setting_start-recommended-section_Option_0": "Rādīt",
   "Setting_start-recommended-section_Option_1": "Slēpt",
   "Setting_start-show-all-pins-by-default_Name": "Pēc noklusējuma rādīt visas piespraudes",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Pielāgots",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Prožektors",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Jautri fakti un padomi",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Slaidrāde",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Ieteicamais saturs",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Laika joslas ieteikumi",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Sagaidīšanas pieredze",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Bloķēšanas ekrāns",
   "Setting_privacy-lock-screen_Description": "Atļauj lietotājiem bloķēt savu datoru, izmantojot Windows+L, Starta izvēlni vai Ctrl+Alt+Del ekrānu",
   "Setting_privacy-rotating-lock-screen_Name": "Windows prožektors bloķēšanas ekrānā",
-  "Setting_privacy-rotating-lock-screen_Description": "Parāda rotējošus Windows prožektora attēlus jūsu bloķēšanas ekrānā, nevis statisku fonu",
+  "Setting_privacy-rotating-lock-screen_Description": "Parāda rotējošus Windows prožektora attēlus jūsu bloķēšanas ekrānā, nevis statisku fonu. Kad šis iestatījums ir iespējots, Winhance automātiski iestata Sākuma izvēlnes ieteicamo sadaļu kā redzamu, jo tas ir nepieciešams",
   "Setting_privacy-lock-screen-overlay_Name": "Bloķēšanas ekrāna jautrie fakti un padomi",
   "Setting_privacy-lock-screen-overlay_Description": "Parāda jautrus faktus, padomus un trikus kā pārklājumu jūsu bloķēšanas ekrānā",
-  "Setting_privacy-lock-screen-slideshow_Name": "Bloķēšanas ekrāna slaidrāde",
-  "Setting_privacy-lock-screen-slideshow_Description": "Iespējo slaidrādes opciju bloķēšanas ekrāna fonam",
   "Setting_privacy-advertising-id_Name": "Ļaut lietotnēm rādīt man personalizētas reklāmas, izmantojot manu reklāmas ID",
   "Setting_privacy-advertising-id_Description": "Windows ģenerē unikālu reklāmas ID, ko lietotnes izmanto, lai izsekotu jūsu darbības un piegādātu personalizētas reklāmas, pamatojoties uz jūsu uzvedību dažādās lietotnēs",
   "Setting_privacy-language-list_Name": "Ļaut vietnēm rādīt man lokāli atbilstošu saturu, piekļūstot manam valodu sarakstam",
