--- a/src/Winhance.UI/Features/Common/Localization/pl.json
+++ b/src/Winhance.UI/Features/Common/Localization/pl.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Więcej przypiętych",
   "Setting_start-menu-layout_Option_2": "Więcej rekomendacji",
   "Setting_start-recommended-section_Name": "Sekcja rekomendacji",
-  "Setting_start-recommended-section_Description": "Pokaż lub ukryj dolną sekcję, która wyświetla ostatnio otwarte pliki i sugerowane aplikacje",
+  "Setting_start-recommended-section_Description": "Pokaż lub ukryj dolną sekcję, która wyświetla ostatnio otwarte pliki i sugerowane aplikacje. Ukrycie tej sekcji usuwa również Windows Spotlight z opcji ekranu blokady",
   "Setting_start-recommended-section_Option_0": "Pokaż",
   "Setting_start-recommended-section_Option_1": "Ukryj",
   "Setting_start-show-all-pins-by-default_Name": "Pokaż wszystkie przypięte domyślnie",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Niestandardowe",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Spotlight",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Ciekawe fakty i wskazówki",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Pokaz slajdów",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Sugerowana zawartość",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Sugestie osi czasu",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Doświadczenie powitalne",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Ekran blokady",
   "Setting_privacy-lock-screen_Description": "Umożliwia użytkownikom blokowanie komputera za pomocą Windows+L, menu Start lub ekranu Ctrl+Alt+Del",
   "Setting_privacy-rotating-lock-screen_Name": "Windows Spotlight na ekranie blokady",
-  "Setting_privacy-rotating-lock-screen_Description": "Wyświetla obracające się obrazy Windows Spotlight na ekranie blokady zamiast statycznego tła",
+  "Setting_privacy-rotating-lock-screen_Description": "Wyświetla obracające się obrazy Windows Spotlight na ekranie blokady zamiast statycznego tła. Winhance automatycznie ustawia sekcję Polecane w menu Start na Pokaż, gdy to ustawienie jest włączone, ponieważ jest to wymagane",
   "Setting_privacy-lock-screen-overlay_Name": "Ciekawe fakty i wskazówki na ekranie blokady",
   "Setting_privacy-lock-screen-overlay_Description": "Wyświetla ciekawe fakty, wskazówki i triki jako nakładkę na ekranie blokady",
-  "Setting_privacy-lock-screen-slideshow_Name": "Pokaz slajdów na ekranie blokady",
-  "Setting_privacy-lock-screen-slideshow_Description": "Włącza opcję pokazu slajdów dla tła ekranu blokady",
   "Setting_privacy-advertising-id_Name": "Pozwól aplikacjom pokazywać mi spersonalizowane reklamy, używając mojego identyfikatora reklamowego",
   "Setting_privacy-advertising-id_Description": "System Windows generuje unikalny identyfikator reklamowy, którego aplikacje używają do śledzenia Twojej aktywności i dostarczania spersonalizowanych reklam na podstawie Twojego zachowania w różnych aplikacjach",
   "Setting_privacy-language-list_Name": "Pozwól witrynom pokazywać mi treści istotne dla mojej lokalizacji, uzyskując dostęp do mojej listy języków",
