--- a/src/Winhance.UI/Features/Common/Localization/pt-BR.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt-BR.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Mais fixados",
   "Setting_start-menu-layout_Option_2": "Mais recomendações",
   "Setting_start-recommended-section_Name": "Seção Recomendado",
-  "Setting_start-recommended-section_Description": "Mostrar ou ocultar a seção inferior que exibe arquivos abertos recentemente e aplicativos sugeridos",
+  "Setting_start-recommended-section_Description": "Mostrar ou ocultar a seção inferior que exibe arquivos abertos recentemente e aplicativos sugeridos. Ocultar esta seção também remove o Destaque do Windows das opções da tela de bloqueio",
   "Setting_start-recommended-section_Option_0": "Mostrar",
   "Setting_start-recommended-section_Option_1": "Ocultar",
   "Setting_start-show-all-pins-by-default_Name": "Mostrar todos os fixados por padrão",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Personalizado",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Destaque",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Curiosidades e Dicas",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Apresentação de Slides",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Conteúdo Sugerido",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Sugestões da Linha do Tempo",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Experiência de Boas-Vindas",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Tela de Bloqueio",
   "Setting_privacy-lock-screen_Description": "Permite que os usuários bloqueiem o computador usando Windows+L, menu Iniciar ou tela Ctrl+Alt+Del",
   "Setting_privacy-rotating-lock-screen_Name": "Destaque do Windows na Tela de Bloqueio",
-  "Setting_privacy-rotating-lock-screen_Description": "Exibe imagens rotativas do Destaque do Windows na tela de bloqueio em vez de um plano de fundo estático",
+  "Setting_privacy-rotating-lock-screen_Description": "Exibe imagens rotativas do Destaque do Windows na tela de bloqueio em vez de um plano de fundo estático. O Winhance define automaticamente a Seção Recomendados do Menu Iniciar para Mostrar quando esta configuração está ativada, pois é obrigatório",
   "Setting_privacy-lock-screen-overlay_Name": "Curiosidades e Dicas da Tela de Bloqueio",
   "Setting_privacy-lock-screen-overlay_Description": "Exibe curiosidades, dicas e truques como uma sobreposição na tela de bloqueio",
-  "Setting_privacy-lock-screen-slideshow_Name": "Apresentação de Slides da Tela de Bloqueio",
-  "Setting_privacy-lock-screen-slideshow_Description": "Ativa a opção de apresentação de slides para o plano de fundo da tela de bloqueio",
   "Setting_privacy-advertising-id_Name": "Permitir que aplicativos me mostrem anúncios personalizados usando meu ID de publicidade",
   "Setting_privacy-advertising-id_Description": "O Windows gera um ID de publicidade exclusivo que os aplicativos usam para rastrear sua atividade e fornecer anúncios personalizados com base no seu comportamento em diferentes aplicativos",
   "Setting_privacy-language-list_Name": "Permitir que sites me mostrem conteúdo localmente relevante acessando minha lista de idiomas",
