--- a/src/Winhance.UI/Features/Common/Localization/pt.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Mais afixados",
   "Setting_start-menu-layout_Option_2": "Mais recomendações",
   "Setting_start-recommended-section_Name": "Secção Recomendado",
-  "Setting_start-recommended-section_Description": "Mostrar ou ocultar a secção inferior que exibe ficheiros abertos recentemente e aplicações sugeridas",
+  "Setting_start-recommended-section_Description": "Mostrar ou ocultar a secção inferior que exibe ficheiros abertos recentemente e aplicações sugeridas. Ocultar esta secção também remove o Destaque do Windows das opções do ecrã de bloqueio",
   "Setting_start-recommended-section_Option_0": "Mostrar",
   "Setting_start-recommended-section_Option_1": "Ocultar",
   "Setting_start-show-all-pins-by-default_Name": "Mostrar todos os afixados por predefinição",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Personalizado",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Destaque",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Curiosidades e Dicas",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Apresentação de Diapositivos",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Conteúdo Sugerido",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Sugestões da Linha de Tempo",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Experiência de Boas-vindas",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Ecrã de Bloqueio",
   "Setting_privacy-lock-screen_Description": "Permite que os utilizadores bloqueiem o seu computador usando Windows+L, menu Iniciar ou ecrã Ctrl+Alt+Del",
   "Setting_privacy-rotating-lock-screen_Name": "Destaque do Windows no Ecrã de Bloqueio",
-  "Setting_privacy-rotating-lock-screen_Description": "Exibe imagens rotativas do Destaque do Windows no seu ecrã de bloqueio em vez de um fundo estático",
+  "Setting_privacy-rotating-lock-screen_Description": "Exibe imagens rotativas do Destaque do Windows no seu ecrã de bloqueio em vez de um fundo estático. O Winhance define automaticamente a Secção Recomendados do Menu Iniciar para Mostrar quando esta definição está ativada, pois é obrigatório",
   "Setting_privacy-lock-screen-overlay_Name": "Curiosidades e Dicas do Ecrã de Bloqueio",
   "Setting_privacy-lock-screen-overlay_Description": "Exibe curiosidades, dicas e truques como uma sobreposição no seu ecrã de bloqueio",
-  "Setting_privacy-lock-screen-slideshow_Name": "Apresentação de Diapositivos do Ecrã de Bloqueio",
-  "Setting_privacy-lock-screen-slideshow_Description": "Ativa a opção de apresentação de diapositivos para o fundo do ecrã de bloqueio",
   "Setting_privacy-advertising-id_Name": "Permitir que as aplicações me mostrem anúncios personalizados usando o meu ID de publicidade",
   "Setting_privacy-advertising-id_Description": "O Windows gera um ID de publicidade único que as aplicações usam para rastrear a sua atividade e entregar anúncios personalizados com base no seu comportamento em diferentes aplicações",
   "Setting_privacy-language-list_Name": "Permitir que os websites me mostrem conteúdo localmente relevante acedendo à minha lista de idiomas",
