--- a/src/Winhance.UI/Features/Common/Localization/ru.json
+++ b/src/Winhance.UI/Features/Common/Localization/ru.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Больше закрепов",
   "Setting_start-menu-layout_Option_2": "Больше рекомендаций",
   "Setting_start-recommended-section_Name": "Раздел 'Рекомендованные'",
-  "Setting_start-recommended-section_Description": "Показать или скрыть нижний раздел, в котором отображаются недавно открытые файлы и предлагаемые приложения",
+  "Setting_start-recommended-section_Description": "Показать или скрыть нижний раздел, в котором отображаются недавно открытые файлы и предлагаемые приложения. Скрытие этого раздела также убирает Windows Spotlight из параметров экрана блокировки",
   "Setting_start-recommended-section_Option_0": "Показать",
   "Setting_start-recommended-section_Option_1": "Скрыть",
   "Setting_start-show-all-pins-by-default_Name": "Показывать все закрепленные элементы по умолчанию",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Пользовательский",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Windows: интересное",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Интересные факты и советы",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Слайд-шоу",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Предлагаемый контент",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Предложения временной шкалы",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Приветствие",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Экран блокировки",
   "Setting_privacy-lock-screen_Description": "Позволяет пользователям блокировать компьютер с помощью Windows+L, меню 'Пуск' или экрана Ctrl+Alt+Del",
   "Setting_privacy-rotating-lock-screen_Name": "Windows: интересное на экране блокировки",
-  "Setting_privacy-rotating-lock-screen_Description": "Отображает сменяющиеся изображения Windows: интересное на экране блокировки вместо статического фона",
+  "Setting_privacy-rotating-lock-screen_Description": "Отображает сменяющиеся изображения Windows: интересное на экране блокировки вместо статического фона. Winhance автоматически включает раздел «Рекомендуемые» в меню «Пуск» при активации этого параметра, так как это необходимо для его работы",
   "Setting_privacy-lock-screen-overlay_Name": "Интересные факты и советы на экране блокировки",
   "Setting_privacy-lock-screen-overlay_Description": "Отображает интересные факты, советы и хитрости в виде наложения на экране блокировки",
-  "Setting_privacy-lock-screen-slideshow_Name": "Слайд-шоу на экране блокировки",
-  "Setting_privacy-lock-screen-slideshow_Description": "Включает опцию слайд-шоу для фона экрана блокировки",
   "Setting_privacy-advertising-id_Name": "Разрешить приложениям показывать мне персонализированную рекламу, используя мой рекламный идентификатор",
   "Setting_privacy-advertising-id_Description": "Windows генерирует уникальный рекламный идентификатор, который приложения используют для отслеживания вашей активности и показа персонализированной рекламы на основе вашего поведения в разных приложениях",
   "Setting_privacy-language-list_Name": "Разрешить веб-сайтам показывать мне локально релевантный контент, получая доступ к моему списку языков",
