--- a/src/Winhance.UI/Features/Common/Localization/sv.json
+++ b/src/Winhance.UI/Features/Common/Localization/sv.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Fler fästa",
   "Setting_start-menu-layout_Option_2": "Fler rekommendationer",
   "Setting_start-recommended-section_Name": "Rekommenderad sektion",
-  "Setting_start-recommended-section_Description": "Visa eller dölj den nedre sektionen som visar nyligen öppnade filer och föreslagna appar",
+  "Setting_start-recommended-section_Description": "Visa eller dölj den nedre sektionen som visar nyligen öppnade filer och föreslagna appar. Om du döljer denna sektion tas även Windows Blickfång bort från låsskärmens alternativ",
   "Setting_start-recommended-section_Option_0": "Visa",
   "Setting_start-recommended-section_Option_1": "Dölj",
   "Setting_start-show-all-pins-by-default_Name": "Visa alla fästa som standard",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Anpassad",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Blickfång",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Roliga fakta och tips",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Bildspel",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Föreslaget innehåll",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Tidslinjeförslag",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Välkomstupplevelse",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Låsskärm",
   "Setting_privacy-lock-screen_Description": "Tillåter användare att låsa sin dator med Windows+L, Start-menyn eller Ctrl+Alt+Del-skärmen",
   "Setting_privacy-rotating-lock-screen_Name": "Windows Blickfång på låsskärmen",
-  "Setting_privacy-rotating-lock-screen_Description": "Visar roterande Windows Blickfång-bilder på din låsskärm istället för en statisk bakgrund",
+  "Setting_privacy-rotating-lock-screen_Description": "Visar roterande Windows Blickfång-bilder på din låsskärm istället för en statisk bakgrund. Winhance ställer automatiskt in Startmenyns rekommenderade sektion till Visa när denna inställning är aktiverad eftersom det krävs",
   "Setting_privacy-lock-screen-overlay_Name": "Roliga fakta och tips på låsskärmen",
   "Setting_privacy-lock-screen-overlay_Description": "Visar roliga fakta, tips och tricks som ett överlägg på din låsskärm",
-  "Setting_privacy-lock-screen-slideshow_Name": "Bildspel på låsskärmen",
-  "Setting_privacy-lock-screen-slideshow_Description": "Aktiverar bildspelsalternativ för låsskärmsbakgrund",
   "Setting_privacy-advertising-id_Name": "Låt appar visa mig personliga annonser genom att använda mitt annons-ID",
   "Setting_privacy-advertising-id_Description": "Windows genererar ett unikt annons-ID som appar använder för att spåra din aktivitet och leverera personliga annonser baserat på ditt beteende i olika appar",
   "Setting_privacy-language-list_Name": "Låt webbplatser visa mig lokalt relevant innehåll genom att komma åt min språklista",
