--- a/src/Winhance.UI/Features/Common/Localization/uk.json
+++ b/src/Winhance.UI/Features/Common/Localization/uk.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Більше закріплених",
   "Setting_start-menu-layout_Option_2": "Більше рекомендацій",
   "Setting_start-recommended-section_Name": "Розділ \"Рекомендовані\"",
-  "Setting_start-recommended-section_Description": "Показати або приховати нижній розділ, що відображає нещодавно відкриті файли та запропоновані програми",
+  "Setting_start-recommended-section_Description": "Показати або приховати нижній розділ, що відображає нещодавно відкриті файли та запропоновані програми. Приховування цього розділу також видаляє Windows Spotlight з параметрів екрана блокування",
   "Setting_start-recommended-section_Option_0": "Показати",
   "Setting_start-recommended-section_Option_1": "Приховати",
   "Setting_start-show-all-pins-by-default_Name": "Показувати всі закріплені елементи за замовчуванням",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Користувацький",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Прожектор",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Цікаві факти та поради",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Слайд-шоу",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Запропонований контент",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Пропозиції часової шкали",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Вітальне вікно",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Екран блокування",
   "Setting_privacy-lock-screen_Description": "Дозволяє користувачам блокувати комп'ютер за допомогою Windows+L, меню \"Пуск\" або екрана Ctrl+Alt+Del",
   "Setting_privacy-rotating-lock-screen_Name": "Windows Spotlight на екрані блокування",
-  "Setting_privacy-rotating-lock-screen_Description": "Відображає обертові зображення Windows Spotlight на екрані блокування замість статичного фону",
+  "Setting_privacy-rotating-lock-screen_Description": "Відображає обертові зображення Windows Spotlight на екрані блокування замість статичного фону. Winhance автоматично встановлює розділ «Рекомендовані» в меню «Пуск» на «Показати», коли цей параметр увімкнено, оскільки це необхідно для його роботи",
   "Setting_privacy-lock-screen-overlay_Name": "Цікаві факти та поради на екрані блокування",
   "Setting_privacy-lock-screen-overlay_Description": "Відображає цікаві факти, поради та хитрощі як накладення на екрані блокування",
-  "Setting_privacy-lock-screen-slideshow_Name": "Слайд-шоу на екрані блокування",
-  "Setting_privacy-lock-screen-slideshow_Description": "Вмикає опцію слайд-шоу для фону екрана блокування",
   "Setting_privacy-advertising-id_Name": "Дозволити додаткам показувати мені персоналізовану рекламу, використовуючи мій рекламний ідентифікатор",
   "Setting_privacy-advertising-id_Description": "Windows генерує унікальний рекламний ідентифікатор, який додатки використовують для відстеження вашої активності та надання персоналізованої реклами на основі вашої поведінки в різних додатках",
   "Setting_privacy-language-list_Name": "Дозволити веб-сайтам показувати мені локально релевантний контент, отримуючи доступ до мого списку мов",
