--- a/src/Winhance.UI/Features/Common/Localization/vi.json
+++ b/src/Winhance.UI/Features/Common/Localization/vi.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Nhiều ghim hơn",
   "Setting_start-menu-layout_Option_2": "Nhiều đề xuất hơn",
   "Setting_start-recommended-section_Name": "Phần được đề xuất",
-  "Setting_start-recommended-section_Description": "Hiển thị hoặc ẩn phần dưới hiển thị các tệp được mở gần đây và các ứng dụng được đề xuất",
+  "Setting_start-recommended-section_Description": "Hiển thị hoặc ẩn phần dưới hiển thị các tệp được mở gần đây và các ứng dụng được đề xuất. Ẩn phần này cũng sẽ xóa Windows Spotlight khỏi các tùy chọn màn hình khóa",
   "Setting_start-recommended-section_Option_0": "Hiển thị",
   "Setting_start-recommended-section_Option_1": "Ẩn",
   "Setting_start-show-all-pins-by-default_Name": "Hiển thị tất cả các ghim theo mặc định",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Tùy chỉnh",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Spotlight",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Sự thật thú vị & Mẹo",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Trình chiếu",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Nội dung được đề xuất",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Đề xuất dòng thời gian",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Trải nghiệm chào mừng",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Màn hình khóa",
   "Setting_privacy-lock-screen_Description": "Cho phép người dùng khóa máy tính của họ bằng Windows + L, menu Bắt đầu hoặc màn hình Ctrl + Alt + Del",
   "Setting_privacy-rotating-lock-screen_Name": "Windows Spotlight trên Màn hình khóa",
-  "Setting_privacy-rotating-lock-screen_Description": "Hiển thị các hình ảnh Windows Spotlight xoay vòng trên màn hình khóa của bạn thay vì nền tĩnh",
+  "Setting_privacy-rotating-lock-screen_Description": "Hiển thị các hình ảnh Windows Spotlight xoay vòng trên màn hình khóa của bạn thay vì nền tĩnh. Winhance tự động đặt Phần đề xuất của Menu Start thành Hiển thị khi cài đặt này được bật vì điều đó là bắt buộc",
   "Setting_privacy-lock-screen-overlay_Name": "Sự thật và mẹo thú vị trên màn hình khóa",
   "Setting_privacy-lock-screen-overlay_Description": "Hiển thị các sự thật, mẹo và thủ thuật thú vị dưới dạng lớp phủ trên màn hình khóa của bạn",
-  "Setting_privacy-lock-screen-slideshow_Name": "Trình chiếu màn hình khóa",
-  "Setting_privacy-lock-screen-slideshow_Description": "Bật tùy chọn trình chiếu cho nền màn hình khóa",
   "Setting_privacy-advertising-id_Name": "Cho phép ứng dụng hiển thị cho tôi quảng cáo được cá nhân hóa bằng cách sử dụng ID quảng cáo của tôi",
   "Setting_privacy-advertising-id_Description": "Windows tạo một ID quảng cáo duy nhất mà các ứng dụng sử dụng để theo dõi hoạt động của bạn và cung cấp quảng cáo được cá nhân hóa dựa trên hành vi của bạn trên các ứng dụng khác nhau",
   "Setting_privacy-language-list_Name": "Cho phép các trang web hiển thị cho tôi nội dung phù hợp với địa phương bằng cách truy cập danh sách ngôn ngữ của tôi",
