--- a/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "更多图钉",
   "Setting_start-menu-layout_Option_2": "更多推荐",
   "Setting_start-recommended-section_Name": "推荐部分",
-  "Setting_start-recommended-section_Description": "显示或隐藏显示最近打开的文件和建议的应用的下部部分",
+  "Setting_start-recommended-section_Description": "显示或隐藏显示最近打开的文件和建议的应用的下方区域。隐藏此区域还会从锁屏选项中移除 Windows 聚焦",
   "Setting_start-recommended-section_Option_0": "显示",
   "Setting_start-recommended-section_Option_1": "隐藏",
   "Setting_start-show-all-pins-by-default_Name": "默认显示所有图钉",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "自定义",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "聚焦",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "有趣的事实和提示",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "幻灯片",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "建议内容",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "时间线建议",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "欢迎体验",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "锁屏",
   "Setting_privacy-lock-screen_Description": "允许用户使用 Windows+L、开始菜单或 Ctrl+Alt+Del 屏幕锁定计算机",
   "Setting_privacy-rotating-lock-screen_Name": "锁屏上的 Windows 聚焦",
-  "Setting_privacy-rotating-lock-screen_Description": "在锁屏上显示旋转的 Windows 聚焦图像，而不是静态背景",
+  "Setting_privacy-rotating-lock-screen_Description": "在锁屏上显示旋转的 Windows 聚焦图像，而不是静态背景。启用此设置时，Winhance 会自动将开始菜单的推荐部分设为显示，因为这是必需的",
   "Setting_privacy-lock-screen-overlay_Name": "锁屏上的有趣事实和提示",
   "Setting_privacy-lock-screen-overlay_Description": "在锁屏上显示有趣的事实、提示和技巧作为叠加层",
-  "Setting_privacy-lock-screen-slideshow_Name": "锁屏幻灯片",
-  "Setting_privacy-lock-screen-slideshow_Description": "为锁屏背景启用幻灯片选项",
   "Setting_privacy-advertising-id_Name": "让应用使用我的广告 ID 向我显示个性化广告",
   "Setting_privacy-advertising-id_Description": "Windows 会生成一个唯一的广告 ID，应用使用该 ID 跟踪您的活动并在不同应用中根据您的行为提供个性化广告",
   "Setting_privacy-language-list_Name": "让网站通过访问我的语言列表向我显示本地相关内容",
