--- a/src/Winhance.UI/Features/Common/Localization/nl.json
+++ b/src/Winhance.UI/Features/Common/Localization/nl.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "Meer vastgemaakte items",
   "Setting_start-menu-layout_Option_2": "Meer aanbevelingen",
   "Setting_start-recommended-section_Name": "Aanbevolen sectie",
-  "Setting_start-recommended-section_Description": "Toon of verberg de onderste sectie die recent geopende bestanden en voorgestelde apps weergeeft",
+  "Setting_start-recommended-section_Description": "Toon of verberg de onderste sectie die recent geopende bestanden en voorgestelde apps weergeeft. Het verbergen van deze sectie verwijdert ook Windows Spotlight uit de vergrendelingsschermopties",
   "Setting_start-recommended-section_Option_0": "Weergeven",
   "Setting_start-recommended-section_Option_1": "Verbergen",
   "Setting_start-show-all-pins-by-default_Name": "Alle vastgemaakte items standaard tonen",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "Aangepast",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Spotlight",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "Leuke Weetjes \u0026 Tips",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "Diavoorstelling",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "Voorgestelde Inhoud",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "Tijdlijn Suggesties",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "Welkomstervaring",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "Vergrendelingsscherm",
   "Setting_privacy-lock-screen_Description": "Staat gebruikers toe hun computer te vergrendelen met Windows+L, Startmenu of Ctrl+Alt+Del scherm",
   "Setting_privacy-rotating-lock-screen_Name": "Windows Spotlight op Vergrendelingsscherm",
-  "Setting_privacy-rotating-lock-screen_Description": "Toont roterende Windows Spotlight-afbeeldingen op uw vergrendelingsscherm in plaats van een statische achtergrond",
+  "Setting_privacy-rotating-lock-screen_Description": "Toont roterende Windows Spotlight-afbeeldingen op uw vergrendelingsscherm in plaats van een statische achtergrond. Winhance stelt automatisch de sectie Aanbevolen in het Startmenu in op Weergeven wanneer deze instelling is ingeschakeld, aangezien dit vereist is",
   "Setting_privacy-lock-screen-overlay_Name": "Vergrendelingsscherm Leuke Weetjes en Tips",
   "Setting_privacy-lock-screen-overlay_Description": "Toont leuke weetjes, tips en trucs als overlay op uw vergrendelingsscherm",
-  "Setting_privacy-lock-screen-slideshow_Name": "Vergrendelingsscherm Diavoorstelling",
-  "Setting_privacy-lock-screen-slideshow_Description": "Schakelt diavoorstellingoptie in voor achtergrond van vergrendelingsscherm",
   "Setting_privacy-advertising-id_Name": "Apps toestaan mij gepersonaliseerde advertenties te tonen met mijn reclame-ID",
   "Setting_privacy-advertising-id_Description": "Windows genereert een unieke reclame-ID die apps gebruiken om uw activiteit bij te houden en gepersonaliseerde advertenties te leveren op basis van uw gedrag in verschillende apps",
   "Setting_privacy-language-list_Name": "Websites toestaan lokaal relevante inhoud te tonen door toegang tot mijn taallijst",
