--- a/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
@@ -230,7 +230,7 @@
   "Setting_start-menu-layout_Option_1": "更多釘選",
   "Setting_start-menu-layout_Option_2": "更多推薦",
   "Setting_start-recommended-section_Name": "推薦項目區塊",
-  "Setting_start-recommended-section_Description": "顯示或隱藏顯示最近開啟檔案與建議應用程式的下方區塊",
+  "Setting_start-recommended-section_Description": "顯示或隱藏顯示最近開啟檔案與建議應用程式的下方區塊。隱藏此區塊也會從鎖定螢幕選項中移除 Windows 聚焦",
   "Setting_start-recommended-section_Option_0": "顯示",
   "Setting_start-recommended-section_Option_1": "隱藏",
   "Setting_start-show-all-pins-by-default_Name": "預設顯示所有釘選項目",
@@ -481,7 +481,6 @@
   "Setting_privacy-ads-promotional-master_Option_2": "自訂",
   "Setting_privacy-ads-promotional-master_Child_Spotlight": "Windows 聚焦",
   "Setting_privacy-ads-promotional-master_Child_FunFactsTips": "趣味知識與提示",
-  "Setting_privacy-ads-promotional-master_Child_Slideshow": "投影片放映",
   "Setting_privacy-ads-promotional-master_Child_SuggestedContent": "建議內容",
   "Setting_privacy-ads-promotional-master_Child_TimelineSuggestions": "時間軸建議",
   "Setting_privacy-ads-promotional-master_Child_WelcomeExperience": "歡迎體驗",
@@ -507,11 +506,9 @@
   "Setting_privacy-lock-screen_Name": "鎖定螢幕",
   "Setting_privacy-lock-screen_Description": "允許使用者透過 Windows+L、開始功能表或 Ctrl+Alt+Del 畫面鎖定電腦",
   "Setting_privacy-rotating-lock-screen_Name": "鎖定螢幕上的 Windows 聚焦",
-  "Setting_privacy-rotating-lock-screen_Description": "在鎖定螢幕上顯示輪替的 Windows 聚焦影像，而非靜態背景",
+  "Setting_privacy-rotating-lock-screen_Description": "在鎖定螢幕上顯示輪替的 Windows 聚焦影像，而非靜態背景。啟用此設定時，Winhance 會自動將開始功能表的建議區段設為顯示，因為這是必要的",
   "Setting_privacy-lock-screen-overlay_Name": "鎖定螢幕趣味知識與提示",
   "Setting_privacy-lock-screen-overlay_Description": "在鎖定螢幕上以覆疊方式顯示趣味知識、提示與技巧",
-  "Setting_privacy-lock-screen-slideshow_Name": "鎖定螢幕投影片放映",
-  "Setting_privacy-lock-screen-slideshow_Description": "啟用鎖定螢幕背景的投影片放映選項",
   "Setting_privacy-advertising-id_Name": "讓應用程式使用我的廣告識別碼顯示個人化廣告",
   "Setting_privacy-advertising-id_Description": "Windows 會產生一組唯一的廣告識別碼，應用程式可使用此識別碼追蹤您的活動，並根據您在不同應用程式間的行為提供個人化廣告",
   "Setting_privacy-language-list_Name": "讓網站存取我的語言清單，以顯示符合當地語言的內容",
